# momsos

./: 1_surface_motzkin.py  2_not_sos_sdp.py  3_ball_hierarchy_bounds.py  README.md  helper.py  notes.md  pyproject.toml
.github/workflows/: gh-pages.yml
code/momsos/: helpers.py  poly.py
code/momsos/experiments/: motzkin_minimize.py  motzkin_not_sos.py  motzkin_surface.py
scripts/: build-all-figures  preview
web/: index.md
